modify radio input name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Celebrity Dating Quiz</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
 </head>
 
@@ -20,13 +20,14 @@
         Please enter your age.
       </div>
       <!--<label for="gender">Your Gender</label><br>-->
-      Please select your gender<br>
-      <label><input type="radio" id="gender" name="gender" value="female">Female</label>
-      <label><input type="radio" id="gender" name="gender" value="male">Male</label><br>
+      <br>
+      <label for="gender">Please select your gender</label><br>
+      <input type="radio" id="gender" name="gender" value="female">Female<br>
+      <input type="radio" id="gender" name="gender" value="male">Male<br>
       <div id="genderError" class="hidden">
         Error! Please select your gender.
       </div>
-     <!-- <button type="submit">Match Me</button>-->
+      <!-- <button type="submit">Match Me</button>-->
       <button type="submit" class="btn btn-primary">Match me</button>
     </form>
   </div>
